# infracanvas

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SHOW_HN_DRAFT.md  TASKS.md  TECH_STACK.md  TEST_REPORT.md  USER_TEST_REPORT.md  VALIDATION_REPORT.md  build.sh  infracanvas-landing.html  infracanvas-viewer.jsx  install.sh  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.dev.toml  fly.prod.toml  pyproject.toml
backend/.planning/phases/01-canvas-mvp/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-07-SUMMARY.md
backend/.planning/phases/02-canvas-v1-0/: 02-03-SUMMARY.md  02-04-SUMMARY.md
backend/.planning/phases/03-flowmap-v1-0/: 03-06-SUMMARY.md  03-08-SUMMARY.md  03-09-SUMMARY.md
backend/.planning/phases/03.5-retroactive-verification/: 03.5-01-SUMMARY.md  03.5-03-SUMMARY.md
backend/.planning/phases/04-e2e-wiring-hardening/: 04-03-SUMMARY.md
backend/.planning/phases/05-viewer-extraction/: 05-01-SUMMARY.md
backend/.planning/phases/05.1-parser-realism-cli-ux/: 05.1-04-SUMMARY.md
backend/.planning/phases/06-saas-backend-foundation/: 06-04-SUMMARY.md  06-06-SUMMARY.md  06-08-SUMMARY.md
backend/.planning/phases/07-saas-dashboard-history-share/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-05-SUMMARY.md  07-07-SUMMARY.md
backend/.planning/phases/07.1-phase-7-ui-contract-remediation/: 07.1-02-SUMMARY.md  07.1-03-SUMMARY.md  07.1-04-SUMMARY.md  07.1-05-SUMMARY.md
backend/.planning/phases/07.2-ui-contract-remediation-live/: 07.2-02-SUMMARY.md  07.2-03-SUMMARY.md  07.2-04-SUMMARY.md  07.2-05-SUMMARY.md  07.2-06-SUMMARY.md  07.2-07-SUMMARY.md  07.2-09-SUMMARY.md
backend/.planning/phases/07.5-github-repo-connector/: 07.5-01-SUMMARY.md  07.5-02-SUMMARY.md  07.5-03-SUMMARY.md  07.5-05-SUMMARY.md  07.5-07-SUMMARY.md  07.5-08-SUMMARY.md  07.5-09-SUMMARY.md  07.5-10-SUMMARY.md  07.5-11-SUMMARY.md
backend/.planning/phases/08-github-webhook-autoscan/: 08-03-SUMMARY.md  08-04-SUMMARY.md
backend/app/: main.py  settings.py
backend/app/auth/: clerk.py  deps.py  site_token.py  webhooks.py
backend/app/billing/: __init__.py  stripe_meter.py
backend/app/db/: base.py  models.py  session.py
backend/app/integrations/: __init__.py
backend/app/integrations/github/: __init__.py  auth.py  client.py
backend/app/notifications/: __init__.py  slack.py
backend/app/obs/: logging.py  middleware.py  sentry.py
backend/app/queue/: broker.py  middleware.py
backend/app/queue/tasks/: firewall_prune.py  indexing.py  netflow_prune.py  path_compute.py  path_compute_prune.py  scan_repo.py
backend/app/routes/: agent.py  firewalls.py  github.py  health.py  integrations.py  paths.py  scans.py  scans_from_github.py  share.py  webhooks.py
backend/app/schemas/: __init__.py  agent.py  firewall.py  github.py  paths.py  scan.py  share.py
backend/app/security/: __init__.py
backend/app/security/pathcompute/: __init__.py  asymmetry.py  classify.py  correlate.py  forward.py  lpm.py  (+2 more)
backend/app/services/: __init__.py  bcrypt_hash.py  diff.py  scans.py
backend/app/storage/: __init__.py  r2.py
backend/app/util/: ids.py
backend/migrations/: env.py
backend/migrations/versions/: 20260424_001_initial_schema.py  20260424_002_rls_setup.py  20260424_003_teams_lookup_policy.py  20260424_004_scan_team_id_helper.py  20260428_005_scan_metadata_columns.py  20260428_006_share_links.py  20260503_007_github_installations.py  20260503_008_scan_github_columns.py  20260505_009_slack_webhook_url.py  20260507_010_dc_sites.py  20260510_011_firewall_tables.py  20260518_012_route_flow_tables.py  20260518_013_path_compute_tables.py
backend/scripts/: provision_vendors.md  r2_cors.json  r2_lifecycle.json  smoke_release.sh  validate_fly_toml.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_fly_config.py  test_health.py  test_migrations.py  test_obs.py  test_rls.py  test_routes_firewall.py  test_routes_firewall_read.py  test_scaffold.py  test_scans.py  test_scans_compare.py  test_scans_list.py  test_schemas_firewall.py  test_sentry.py  test_services_scans.py  test_settings.py  test_share.py  test_storage.py  test_stripe_meter.py  test_tasks.py  test_webhooks.py
backend/tests/api/: __init__.py  conftest.py  test_github_branches.py  test_github_callback.py  test_github_installations.py  test_github_repos.py  test_github_webhook.py  test_integrations.py  test_scans_from_github.py
backend/tests/fixtures/: bypass_role.sql
backend/tests/integrations/: __init__.py
backend/tests/jobs/: __init__.py  test_path_compute_alerts.py  test_scan_repo.py
backend/tests/migrations/: test_path_compute_rls.py
backend/tests/notifications/: test_slack_dispatcher.py
backend/tests/queue/: test_path_compute_schedule.py
backend/tests/routes/: test_agent_routes_persist.py  test_paths_read.py  test_paths_recompute.py
cli/: README.md  infracanvas.spec  pyproject.toml
cli/infracanvas/: __init__.py  config.py  main.py
cli/infracanvas/cost/: allocator.py  egress.py  estimator.py  idle.py
cli/infracanvas/drift/: analyzer.py
cli/infracanvas/export/: html.py  json.py  scorecard.py  viewer_template.html
cli/infracanvas/flowmap/: aws.py  azure.py  collector.py
cli/infracanvas/graph/: builder.py  layout.py  models.py  summary.py
cli/infracanvas/parser/: azure.py  hcl.py  module.py  plan.py  references.py  state.py
cli/infracanvas/security/: engine.py  loader.py  models.py  scorer.py  staleness.py
cli/infracanvas/shadow/: detector.py
cli/tests/: conftest.py  test_azure_parser.py  test_cli.py  test_cli_contract.py  test_config.py  test_cost.py  test_costlens.py  test_drift.py  test_flowmap_aws.py  test_flowmap_azure.py  test_flowmap_cli.py  test_flowmap_models.py  test_flowmap_network_rules.py  test_graph.py  test_integration.py  test_net_010_detector.py  test_parser.py  test_plan.py  test_policy.py  test_scorer.py  test_security.py  test_shadow.py  test_staleness.py  test_viewer_template_bundle.py
cli/tests/fixtures/: sample_plan.json
(+763 files in other folders)
