[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infracanvas"
version = "0.1.0"
description = "Parse Terraform code and generate annotated resource graphs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-hcl2>=4.3.0",
    "networkx>=3.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
infracanvas = "infracanvas.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["hcl2.*"]
ignore_missing_imports = true
