[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infracanvas"]

[tool.hatch.build]
artifacts = [
    "infracanvas/export/viewer_template.html",
    "infracanvas/security/rules/**/*.yaml",
]

[project]
name = "infracanvas"
version = "0.1.0"
description = "Interactive Terraform architecture diagrams with security findings, drift detection, and cost estimates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["terraform", "infrastructure", "architecture", "security", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer==0.12.3",
    "click>=8.1.0,<8.2",
    "rich==13.7.1",
    "python-hcl2==4.3.4",
    "networkx==3.3",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "watchdog==4.0.1",
]

[project.scripts]
infracanvas = "infracanvas.main:app"

[project.urls]
Homepage = "https://infracanvas.dev"
Repository = "https://github.com/infracanvas/infracanvas"
Documentation = "https://docs.infracanvas.dev"
"Bug Tracker" = "https://github.com/infracanvas/infracanvas/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["hcl2.*"]
ignore_missing_imports = true
