[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infracanvas"]

[tool.hatch.build]
artifacts = [
    "infracanvas/export/viewer_template.html",
    "infracanvas/security/rules/**/*.yaml",
]

[project]
name = "infracanvas"
version = "0.1.0"
description = "Interactive Terraform architecture diagrams with security findings, drift detection, and cost estimates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["terraform", "infrastructure", "architecture", "security", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer==0.12.3",
    "click>=8.1.0,<8.2",
    "rich==13.7.1",
    "python-hcl2==4.3.4",
    "networkx==3.3",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "watchdog==4.0.1",
]

[project.optional-dependencies]
shadow = ["boto3>=1.34", "boto3-stubs[ec2,s3,rds]>=1.34"]
flowmap = [
    "boto3>=1.40,<2",
    "boto3-stubs[ec2,s3,rds,directconnect]>=1.40",
    "azure-identity>=1.20,<2",
    "azure-mgmt-network>=28,<31",
    "azure-mgmt-resource>=23,<26",
]
test = ["moto>=5.1,<6", "placebo>=0.10", "pytest-cov>=5,<8"]

[project.scripts]
infracanvas = "infracanvas.main:app"

[project.urls]
Homepage = "https://infracanvas.dev"
Repository = "https://github.com/sairintechnologycom/infracanvas"
Documentation = "https://docs.infracanvas.dev"
"Bug Tracker" = "https://github.com/infracanvas/infracanvas/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=infracanvas.security --cov=infracanvas.cost --cov=infracanvas.drift --cov-branch --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["infracanvas"]
omit = [
    "infracanvas/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 (line-too-long): line-length=100 already caps real code; remaining
#   offenders are docstrings/comments where wrapping hurts readability.
# N801 (invalid-class-name): test classes deliberately encode plan/test IDs
#   (TestPhase51CLI, Test5_1_E).
ignore = ["E501", "N801"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["hcl2.*"]
ignore_missing_imports = true
